<resources>
    <string name="app_name">KarakocTekstilv2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="unit_prices">Birim fiyatlar</string>
    <string name="cloth_meter_price">Bez metre fiyatı($)</string>
    <string name="yarn_weight_price">İp kilo fiyatı($)</string>
    <string name="save">Kaydet</string>
    <string name="exchange_rate_dollar">Dolar kuru</string>
    <string name="exchange_rate_euro">Euro kuru</string>
</resources>